<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.chembrovich.bsuir.photosaver.Views.LoginFragment">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/login_edit_text_register"
            android:layout_width="@dimen/start_activity_elements_width"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/login_hint"/>

        <EditText
            android:id="@+id/password_edit_text_register"
            android:layout_width="@dimen/start_activity_elements_width"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password_hint"/>

        <EditText
            android:id="@+id/repeat_password_edit_text_register"
            android:layout_width="@dimen/start_activity_elements_width"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/repeat_password_hint"/>

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="@dimen/start_activity_elements_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:text="@string/sign_up_button"
            android:layout_marginTop="@dimen/start_activity_buttons_top_margin"
            android:textColor="@color/start_activity_button_text_color"/>
    </LinearLayout>
</FrameLayout>
